# fastapi-sample

./: .gitignore  compose.yaml
.github/workflows/: deploy-pr.yaml  pre-commit.yml
app/: Dockerfile  database.py  pyproject.toml  requirements.txt  schemas.py
