[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.4.1",
    "click==8.0.1",
    "fastapi==0.118.2",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "pydantic==2.12.0",
    "pymysql==1.1.1",
    "sqlalchemy==2.0.43",
    "starlette==0.48.0",
    "typing-extensions==4.15.0",
    "uvicorn==0.37.0",
]
